--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="header-content">
-        <div class="logo">🎓 CodeSchool</div>
+        <div class="logo">🎓 EvalSys</div>
         <div class="auth-buttons" id="authButtons">
             <button class="btn-login" onclick="openModal('loginModal')">Iniciar Sesión</button>
             <button class="btn-register" onclick="openModal('registerModal')">Registrarse</button>
